Fix panel backgroud color in dark mode

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -30,7 +30,7 @@
   padding: 3.325rem 3.0125rem;
   border-radius: 1.5625rem;
 
-  background-color: #fff;
+  background-color: var(--ifm-background-color);
   border: #f2f2f2 1px solid;
 
   transition: all 200ms ease-out 10ms;
